apps/production/teslamate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teslamate
  labels:
    app.kubernetes.io/name: teslamate
